Modify access rules

--- a/project.config
+++ b/project.config
@@ -3,6 +3,7 @@
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
+	owner = group user/Ronelle Landy (rlandy)
 	owner = group user/wes hayutin (weshayutin)
 [access "refs/for/refs/*"]
 	read = group user/wes hayutin (weshayutin)
