Adds steps from undercloud-post
To avoid code duplication, this commit includes
baremetal-specific steps that were in
ansible-role-tripleo-undercloud-post.
Baremetal jobs should be able to use the standard
deployment and image preo role after this role is
run.

Change-Id: I17959362254e34848bf4c0fc7c39d5b0449bb655

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,3 +2,7 @@
 - include: add-disk-size-hint.yml
 
 - include: adjust-mtu-dnsmasq-ironic.yml
+
+- include: copy-config-files.yml
+
+- include: allow-traffic-for-controller.yml
