--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,17 @@
 ---
 working_dir: /home/stack
+
 step_root_device_size: false
+
 step_adjust_mtu: false
 mtu: 1350
 mtu_interface:
   - eth1
+
+undercloud_type: virtual
+baremetal_instackenv: "{{ working_dir }}/instackenv.json"
+baremetal_network_environment: "{{ working_dir }}/network-isolation.yml"
+
+network-isolation: true
+network_isolation_ipv4_cidr: "172.16.23.0/24"
+
